# dual

./: .dual.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md
.claude/: settings.json
.claude/agents/: architecture-scoper.md  build-scoper.md  knowledge-analyst.md  knowledge-comparator.md  knowledge-locator.md  knowledge-prober.md  knowledge-validator.md
.claude/commands/: architecture_loop.md  build_loop.md  create-experiment.md  create_experiment.md  research-experiment.md  run-experiment.md  run_experiment.md  validate-experiment.md  validate_experiment.md
.claude/evals/: README.md  golden_set.json  package.json  research_experiment_cases.json
.claude/hooks/: architecture-loop-hook.sh
.github/workflows/: dist.yml  test.yml
83/e76ce9f6e4/: metadata.json
84/b2b35255d7/: metadata.json
experiments/: README.md
experiments/arch-anonymous-volume-shadow/: findings.md
experiments/arch-bind-mount-visibility/: experiment.md  findings.md  validation.md
experiments/arch-claude-in-container/: findings.md
experiments/arch-command-routing-accuracy/: validation.md
experiments/arch-concurrent-containers/: findings.md
experiments/arch-container-network-isolation/: experiment.md  findings.md  validation.md
experiments/arch-credential-mounting/: findings.md
experiments/arch-docker-abstraction-leakage/: COMPARISON.md  LEAKAGE_FINDINGS.md  LEAKAGE_SUMMARY.md  README.md  TEST_COMMANDS.md
experiments/arch-docker-exec-basic/: experiment.md  findings.md  validation.md
experiments/arch-e2e-ci-environment/: validation.md
experiments/arch-e2e-local-fixture-repo/: validation.md
experiments/arch-e2e-test-isolation/: validation.md
experiments/arch-git-clone-local/: findings.md
experiments/arch-localhost-resolution/: validation.md
experiments/arch-network-isolation/: experiment.md  findings.md  validation.md
experiments/arch-reverse-proxy-subdomain/: validation.md
experiments/arch-shell-interception-transparency/: validation.md
src/: backend.rs  cli.rs  clone.rs  config.rs  container.rs  lib.rs  main.rs  proxy.rs  shared.rs  shell.rs  state.rs  tmux.rs  tmux_backend.rs
tests/: e2e.rs  fixture_smoke.rs  harness_smoke.rs
thoughts/: ARCHITECTURE.md  BUILD.md
(+97 files in other folders)
