[package]
name = "dual"
version = "1.3.0"
edition = "2024"
description = "Terminal workspace orchestrator for parallel multi-repo development with AI coding agents"
repository = "https://github.com/jeevanpillay/dual"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.8"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

